# One_Billion_Rows

./: README.md  etl_duckdb.py  etl_pandas.py  pyproject.toml
dashboard/: dashboard.py
data/: measurements_summary.parquet
