[project]
name = "one-billion-rows"
version = "0.1.0"
description = ""
authors = [
    {name = "vitorspada",email = "vitorspada.rs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "duckdb (>=1.5.4,<2.0.0)",
    "streamlit (>=1.58.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
